[project]
name = "cvescan"
version = "0.1.0"
description = "Scan package dependency files for known CVE vulnerabilities using the OSV database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
]

[project.scripts]
cvescan = "cvescan:main"

[tool.uv]
package = true
